--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,14 @@
 # Site settings
-title: Arthur Su Blog
-description: Have fun
+title:  Arthur Su Blog
+description:    Have fun
 baseurl:
-url: https://guyverone.github.io
-rss_url:
+url:    https://guyverone.github.io
 
 # Build settings
-
-highlight: true
-#highlighter: rouge
-
 markdown: kramdown
 kramdown:
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
+    auto_ids: true
+    input:    GFM
+    syntax_highlighter: rouge
 
-  coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
+highlighter:    rouge
